import BaseModel from '../base-model.js';
import { DataTypes } from 'sequelize';
import validateCpf from '../cpf-validation.js';
import status from '../../shared/enum/biker-status.js';
import Passport from './passport.js';
import Rental from './rental.js';
import Charge from './charge.js';
import CreditCard from './credit-card.js';

export default class Biker extends BaseModel {
  static modelAttributes = {
    cpf: {
      type: DataTypes.CHAR( 11 ), 
      unique: true, 
      validate: {
        isCpf( cpf ) {
          if ( !validateCpf( cpf ) )
            throw new Error( 'Invalid CPF.' );
        }
      }
    }, 
    name: {
      type: DataTypes.STRING, 
      allowNull: false, 
      validate: {
        is: /\b[A-Z][a-z]+(?:\s[A-Z][a-z]+)+\b/
      }
    }, 
    birthDate: {
      type: DataTypes.DATEONLY, 
      allowNull: false, 
      validate: {
        isDate: true
      }
    }, 
    email: {
      type: DataTypes.STRING, 
      allowNull: false, 
      unique: true, 
      validate: {
        isEmail: true
      }
    }, 
    password: {
      type: DataTypes.CHAR( 60 ), 
      allowNull: false, 
      validate: {
        is: /\$2[aby]\$10\$[./A-Za-z0-9]{53}/
      }
    }, 
    foreigner: {
      type: DataTypes.BOOLEAN, 
      allowNull: false, 
      validate: {
        isIn: [ [ true, false ] ]
      }
    }, 
    status: {
      type: DataTypes.ENUM, 
      values: Object.values( status ), 
      allowNull: false, 
      defaultValue: status.PENDING, 
      validate: {
        isIn: [ Object.values( status ) ]
      }
    }
  }

  static defineAssociations() {
    this.hasOne( Passport );
    this.hasMany(
      Charge, 
      { foreignKey: { allowNull: false } }
    );
    this.hasMany(
      Rental, 
      { foreignKey: { allowNull: false } }
    );
    this.belongsTo(
      CreditCard, 
      { foreignKey: { allowNull: false } }
    );
  }
}
